--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
+
 {
     "version": 2,
     "builds": [
@@ -9,7 +10,8 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/index.js"
+            "dest": "/",
+            "methods": ["GET", "POST", "PATCH","PUT", "DELETE", "OPTIONS"]
         }
     ]
 }
